use unpacked scanlines when rendering gradients.

* There is no point in trying to pack the scanlines in a gradient, as it
is very likely that each pixel will have a different color.
* Moreover, the packed scanline generator will assume all pixels in the
* scanline have the same alpha value (for faster blending), and it may
* not be the case.

Fixes #2946.
Thanks to stippi and jessicah who helped tracking and understanding the issue.